infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  replicas: 1
  # selector to find the pods the development will create
  selector:
    matchLabels:
      app: auth
    # template for creating pods
  template:
    metadata:
      labels:
        app: auth
        # spec for telling the pod how to behave
    spec:
      containers:
        - name: auth
          image: isaacelesia/auth
---
apiVersion: v1
kind: Service
metadata:
  name: auth-srv
# Tell the service how to behave
spec:
  type: ClusterIP
  # selector to tell the service the set of pods it should gorvern access to
  selector:
    app: auth
  #pods we want to expose on that pod
  ports:
    - name: auth
      protocol: TCP
      port: 3000
      targetPort: 3000
