infra/k8s/auth-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-mongo-depl
spec:
  replicas: 1
  # selector to find the pods the development will create
  selector:
    matchLabels:
      app: auth-mongo
    # template for creating pods
  template:
    metadata:
      labels:
        app: auth-mongo
        # spec for telling the pod how to behave
    spec:
      containers:
        - name: auth-mongo
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: auth-mongo-srv
# Tell the service how to behave
spec:
  type: ClusterIP
  # selector to tell the service the set of pods it should gorvern access to
  selector:
    app: auth-mongo
  #pods we want to expose on that pod
  ports:
    - name: auth-db
      protocol: TCP
      port: 27017
      targetPort: 27017
