infra/k8s/tickets-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-depl
spec:
  replicas: 1
  # selector to find the pods the deployment will create
  selector:
    matchLabels:
      app: tickets
    # template for creating pods
  template:
    metadata:
      labels:
        app: tickets
        # spec for telling the pod how to behave
    spec:
      containers:
        - name: tickets
          image: isaacelesia/tickets
---
apiVersion: v1
kind: Service
metadata:
  name: tickets-srv
# Tell the service how to behave
spec:
  type: ClusterIP
  # selector to tell the service the set of pods it should gorvern access to
  selector:
    app: tickets
  #pods we want to expose on that pod
  ports:
    - name: tickets
      protocol: TCP
      port: 3000
      targetPort: 3000
